--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vk-test-communities",
+  "homepage": "https://ivkin-alexey.github.io/vk-test-communities/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,9 +24,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts docs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
